fix floating ref label z-index

--- a/themes/base/scss/regionbrowser.scss
+++ b/themes/base/scss/regionbrowser.scss
@@ -301,7 +301,7 @@
           .referenceLabel {
               bottom: 0;
               height: 100%;
-              z-index: 1;
+              z-index: 10;
               background: #ccc;
               border-left: 1px solid black;
           }
